--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Delaney, Lucy A. (Lucy Ann), 1828?-'
 - !lcsh 'Slaves -- Legal status, laws, etc. -- United States'
 - !lcc 'E300'
+- GITenberg
 title: From the Darkness Cometh the Light, or Struggles for Freedom
 url: http://www.gutenberg.org/ebooks/17820
